force-app/main/default/objects/ssot__AdverseEventSupportInfo__dlm/fields/ssot__rel_1716726427845_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726427845_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventSupportInfo_SupportingIn_rel</label>
    <referenceTo>ssot__Medication__dlm</referenceTo>
    <relationshipLabel>AdverseEventSupportInfo_SupportingIn_rel</relationshipLabel>
    <relationshipName>rel_1716726427845_end</relationshipName>
    <type>Lookup</type>
</CustomField>