force-app/main/default/objects/ssot__AdverseEventSupportInfo__dlm/fields/ssot__SupportingInformationCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupportingInformationCodeId__c</fullName>
    <label>Supporting Information Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupportingInformationCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>