force-app/main/default/objects/ssot__AdverseEventSupportInfo__dlm/fields/ssot__SupportingInformationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupportingInformationId__c</fullName>
    <label>Supporting Information</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupportingInformationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>