force-app/main/default/objects/ssot__AdverseEventSupportInfo__dlm/fields/ssot__SupportingInformationObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupportingInformationObject__c</fullName>
    <label>Supporting Information Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupportingInformationObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>